# xcode

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONFIG.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json  xcode.config.json
.codex/: config.toml
docs/: agent.md  api-reference.md  arch-review-mimo-absorption.md  citation-marker-design.md  claude.md  code-organization.md  code-standards.md  codebase-status-report.md  context-pipeline.md  evaluation-guide.md  git-workflow.md  llm.md  rag.md  review-standards.md  skill-mcp-capability-analysis.md  source-review.md  tool-governance.md
docs/reports/: todo.md
examples/docs/: sample.md
examples/eval/: coding-tasks.jsonl  questions.jsonl
examples/eval/benchmarks/: evalplus-humaneval-sample.jsonl
skills/code-review/: SKILL.md
src/xcode/: __init__.py  __main__.py  main.py
src/xcode/agent/: README.md  __init__.py  _provider.py  _tool_scheduling.py  _tool_validation.py  agent.py  agent_loop.py  compaction.py  config.py  context_assembly.py  context_collector.py  events.py  history.py  hooks.py  message_converter.py  messages.py  protocols.py  provider_response.py  provider_retry.py  results.py  tool_execution.py  types.py  watchdog.py
src/xcode/ai/: README.md  __init__.py  cache.py  events.py  model_modes.py  registry.py  stream.py  types.py  validation.py
src/xcode/cli/: __init__.py  app_contract.py  commands.py  completion.py  config_cmd.py  file_refs.py  markdown.py  reasoning_effort.py  repl.py  repl_commands.py  repl_hitl.py  repl_rendering.py  repl_sessions.py  repl_settings.py  repl_skills.py  repl_tools.py  repl_turn_handler.py  session.py  setup_wizard.py  tool_catalog.py
src/xcode/coding_agent/: __init__.py  registry.py
src/xcode/evals/: __init__.py  benchmarks.py  cli.py  eval_harness.py  graders.py  reporting.py  runner.py  sandbox.py  schema.py  tasks.py  tracing.py  validation.py
src/xcode/experimental/: __init__.py  bm25.py  daemon.py  mailbox.py  mcp.py  mcp_client.py  mcp_config_compat.py  memory.py  memory_parsing.py  orchestration_store.py  plugins.py  progress.py  speculation.py  task_progress.py  task_store.py  tasks.py  worktree.py
src/xcode/harness/: README.md  __init__.py  app.py  assembly.py  compaction.py  (+21 more)
(+203 files in other folders)
