[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xcode-agent"
version = "0.1.0"
description = "A lightweight Python coding agent harness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.0.0",
    "filelock>=3.0.0",
    "zai-sdk",
]

[project.scripts]
xcode = "xcode.main:main"
xcode-eval = "xcode.evals.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xcode*"]
