[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xcode-agent"
version = "0.1.1"
description = "A lightweight Python coding agent harness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.0.0",
    "filelock>=3.0.0",
    "python-dotenv>=1.2.2",
    "orjson>=3.11.9",
    "pillow==12.2.0",
    "jsonschema>=4.0.0",
    "blinker>=1.7.0",
    "questionary>=2.0.0",
    "rank-bm25>=0.2.2",
    "filetype>=1.2.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.15",
]

[project.scripts]
xcode = "xcode.main:main"
xcode-eval = "xcode.evals.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xcode*"]
